--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>车展搭建商资质审核</title>
+    <title>Test</title>
   </head>
   <script>
   </script>
